# py-finstmt

./: .buildinfo  .cruft.json  .envrc  .flake8  .gitignore  .releaserc.yaml  .tool-versions  CHANGELOG.md  DEVELOPING.md  Pipfile  README.md  conf.py  flexlate.json  genindex.html  global-requirements.txt  index.html  justfile  mypy.ini  objects.inv  output.txt  package.json  pnpm-lock.yaml  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  tutorial.html  version.py
.github/workflows/: automerge.yml  check-pr-title.yml  commit-checks.yml  docs.yml  package.yml  pr-checks.yml  template-update.yml  test-pr-close.yml
.husky/: commit-msg  pre-commit
.venvs/docs/: pyproject.toml
.venvs/lint/: pyproject.toml
_downloads/04cdf4071d7b13ffd0c8a56fc3cbee20/: forecasting.py
_downloads/21962ad06e0ea7d64b9b69972becfc4e/: manipulating_statements.ipynb
_downloads/96a4abdb47065398cf6801b4eb7d5c09/: manipulating_statements.py
_downloads/a446f1ef0bfbda02c41a9d492352cecf/: forecasting.ipynb
_modules/: index.html
_modules/finstmt/: check.html  exc.html
_sources/: tutorial.md.txt  tutorial.rst.txt
_sources/api/: finstmt.bs.rst.txt  finstmt.clean.rst.txt  finstmt.combined.rst.txt  (+10 more)
_static/: custom.css  documentation_options.js
api/: finstmt.bs.html  finstmt.clean.html  finstmt.combined.html  finstmt.config_manage.html  finstmt.findata.html  finstmt.forecast.html  finstmt.forecast.models.html  finstmt.html  finstmt.inc.html  finstmt.items.html  finstmt.loaders.html  finstmt.resolver.html  modules.html
auto_examples/: forecasting.html  index.html  manipulating_statements.html  sg_execution_times.html
binder/: requirements.txt
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docsrc/: Makefile  autobuild.sh
examples/: README.rst  ex3.py  plot_ex1.py
finstmt/: __init__.py  check.py  exc.py  logger.py
nbexamples/: Example From Notebook.ipynb  Forecasting.ipynb
py-finstmt/: README.md  conf.py  flexlate.json
py_qs_example/: __init__.py  mymodule.py
scripts/: asdf-install.sh  install-just.sh  setup-repo.sh
tests/: config.py  conftest.py  test_config.py  test_forecast.py  test_load.py  test_mymodule.py
{{cookiecutter.repo_name}}/: flexlate.json
(+247 files in other folders)
