[tool.poetry]
name = "finstmt-docs"
description = "Documentation building environment for finstmt"
version = "1.0.0"
authors = ["Nick DeRobertis <whoopnip@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
finstmt = {path = "../..", develop = true}
sphinx = "*"
sphinx-autobuild = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-fulltoc = "*"
sphinx-paramlinks = "*"
sphinx-gallery = "*"
sphinx-copybutton = "*"
pypandoc = "*"
myst-parser = "*"
sphinx-material = "*"
matplotlib = "*"
jupyter = "*"